--- a/app/src/main/res/drawable/reset_button_style.xml
+++ b/app/src/main/res/drawable/reset_button_style.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
-        <shape >
+        <shape android:shape="oval">
             <solid android:color="@color/buttonColor"/>
+            <corners android:radius="5dp"/>
         </shape>
     </item>
     <item>
-        <shape>
+        <shape android:shape="oval">
             <solid android:color="@color/buttonColorClicked"/>
+            <corners android:radius="5dp"/>
         </shape>
     </item>
 </selector>
