--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -3,8 +3,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:id="@+id/constraintLayoutRoot"
     tools:context=".GameActivity">
+
+    <TextView
+        android:id="@+id/padding"
+        android:layout_width="5dp"
+        android:layout_height="5dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
+
+    </TextView>
+
+    <Button
+
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        app:layout_constraintTop_toBottomOf="@id/padding"
+        app:layout_constraintRight_toLeftOf="@+id/padding"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:background="@drawable/reset_button_style"
+        android:textColor="@color/white"
+        android:drawableStart="@drawable/reset_icon"
+
+        android:onClick="onclickButtonReset"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
