--- a/app/src/main/res/layout/activity_highscores.xml
+++ b/app/src/main/res/layout/activity_highscores.xml
@@ -7,7 +7,7 @@
     tools:context=".HighscoresActivity">
 
     <ListView
-        android:id="@+id/listView"
+        android:id="@+id/highscoresList"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </ListView>
