--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <!--colours by name -->
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
+    <color name="light_green">#16DD20</color>
 
     <!--colours by use -->
     <color name="buttonColor">#BF808080</color>
