--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -7,6 +7,10 @@
     android:orientation="vertical"
     android:id="@+id/constraintLayoutRoot"
     tools:context=".GameActivity">
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@color/black"></ImageView>
 
     <TextView
         android:id="@+id/padding"
@@ -38,6 +42,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
+        android:textColor="@color/white"
         android:text="@string/game_name">
 
     </TextView>
@@ -51,8 +56,12 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
+        android:textColor="@color/white"
         android:text="@string/game_name">
 
     </TextView>
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
