--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimaryDark"/>
+        android:background="@color/black"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,6 +27,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/game_name"
+            android:textColor="@color/white"
+            android:textSize="@android:dimen/notification_large_icon_height"
+            android:padding="30dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             android:textAlignment="center"/>
 
@@ -51,6 +54,15 @@
             android:textColor="@color/white"
             android:text="@string/buttonHighscores"
             android:onClick="onclickButtonHighScores"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="50dp"
+            android:text="@string/developers"
+            android:textColor="@color/white"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+            android:textAlignment="center"/>
 
     </LinearLayout>
 
