--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -7,19 +7,19 @@
     android:orientation="vertical"
     android:id="@+id/constraintLayoutRoot"
     tools:context=".GameActivity">
+
     <ImageView
+        android:id="@+id/background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@color/black"></ImageView>
+        android:src="@color/black" />
 
     <TextView
         android:id="@+id/padding"
         android:layout_width="5dp"
         android:layout_height="5dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
-
-    </TextView>
+        app:layout_constraintRight_toRightOf="parent" />
 
     <Button
 
@@ -43,9 +43,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
         android:textColor="@color/white"
-        android:text="@string/game_name">
-
-    </TextView>
+        android:text="@string/game_name" />
 
     <TextView
         android:id="@+id/timer"
@@ -57,9 +55,74 @@
         app:layout_constraintTop_toTopOf="parent"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
         android:textColor="@color/white"
-        android:text="@string/game_name">
+        android:text="@string/game_name" />
 
-    </TextView>
+    <LinearLayout
+        android:id="@+id/endScreen"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:orientation="vertical">
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/time_up"
+            android:textColor="@color/white"
+            android:textSize="@android:dimen/notification_large_icon_height"
+            android:padding="20dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+            android:textAlignment="center"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="20dp"
+            android:text="@string/developers"
+            android:textColor="@color/white"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+            android:textAlignment="center"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_margin="20dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:background="@drawable/button_style"
+            android:textColor="@color/white"
+            android:text="@string/buttonPlayAgain"
+            android:onClick="onclickButtonAgain"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_margin="20dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:background="@drawable/button_style"
+            android:textColor="@color/white"
+            android:text="@string/buttonBacktomenu"
+            android:onClick="onclickButtonMenu"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_margin="20dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:background="@drawable/button_style"
+            android:textColor="@color/white"
+            android:text="@string/buttonHighscores"
+            android:onClick="onclickButtonHighScores"/>
+
+
+    </LinearLayout>
+
 
 
 
