Made highscores button on endgame screen stop saving highscores, it now only redirects to highscores page. Otherwise you can go back and forth and enter your current score for all the scores.

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -140,7 +140,7 @@
             android:background="@drawable/button_style"
             android:textColor="@color/white"
             android:text="@string/saveScore"
-            android:onClick="onclickButtonHighScores"/>
+            android:onClick="onclickButtonHighScoresSave"/>
 
     </LinearLayout>
 
