--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,13 +7,14 @@
 
     <!--colours by name -->
     <color name="white">#FFFFFF</color>
-    <color name="black">#000000</color>
+    <color name="black">#2B4162</color>
     <color name="light_green">#16DD20</color>
 
     <!--colours by use -->
-    <color name="buttonColor">#BF808080</color>
-    <color name="buttonColorClicked">#BF3D3D3D</color>
+    <color name="buttonColor">#051014</color>
+    <color name="buttonColorClicked">#1B2529</color>
     <color name="Tint">#BF808080</color>
+    <color name="ic_launcher2_background">#2B4162</color>
 
 
 </resources>
