--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -79,11 +79,13 @@
             android:textAlignment="center"/>
 
         <TextView
+            android:id="@+id/showFinalScore"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="20dp"
             android:text="@string/developers"
             android:textColor="@color/white"
+            android:textSize="30dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             android:textAlignment="center"/>
 
