--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -8,6 +8,7 @@
     android:id="@+id/constraintLayoutRoot"
     tools:context=".GameActivity">
 
+
     <ImageView
         android:id="@+id/background"
         android:layout_width="match_parent"
@@ -16,17 +17,19 @@
 
     <TextView
         android:id="@+id/padding"
-        android:layout_width="5dp"
-        android:layout_height="5dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:layout_width="150px"
+        android:layout_height="150px"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
     <Button
-
+        android:id="@+id/resetButton"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        app:layout_constraintTop_toBottomOf="@id/padding"
-        app:layout_constraintRight_toLeftOf="@+id/padding"
+        app:layout_constraintBottom_toTopOf="@id/padding"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:background="@drawable/reset_button_style"
         android:textColor="@color/white"
@@ -38,7 +41,6 @@
         android:id="@+id/score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="5dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
