--- a/app/src/main/res/layout/activity_highscores.xml
+++ b/app/src/main/res/layout/activity_highscores.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HighscoresActivity"
-    android:background="@color/black">
+    android:background="@color/dark_blue">
 
     <TextView
         android:layout_width="match_parent"
