--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
 
     <!--colours by name -->
     <color name="white">#FFFFFF</color>
-    <color name="black">#2B4162</color>
+    <color name="dark_blue">#2B4162</color>
     <color name="light_green">#16DD20</color>
 
     <!--colours by use -->
